compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_label_shorthand.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type X { X(a: Int, b: Float) }\nfn x() {\n  let c = 2.0\n  let x = X(a: 1, c:)\n  x\n}"
---
error: Unknown label
  ┌─ /src/one/two.gleam:4:19
  │
4 │   let x = X(a: 1, c:)
  │                   ^^ Did you mean `b`?

It accepts these labels:

    b
